# oron-tts

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUNPOD.md  SECURITY  TEST_RESULTS.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  runpod_setup.sh  test_docker.sh  verify_setup.sh
.github/: copilot-instructions.md  reference.md
.github/skills/: dataset-prep.prompt.md  inference.prompt.md  tokenizer-api.prompt.md  train-f5tts.prompt.md
configs/: __init__.py  base.yaml  colab.yaml  config.yaml  hq.yaml  light.yaml  local.yaml  runpod.yaml  vits2_hq.json  vits2_light.json  vits_local.yaml  vits_runpod.yaml
docker/: entrypoint.sh
docs/: RUNPOD.md
logs/: events.out.tfevents.1769606454.tsee-linux.153176.0
notebooks/: oron_tts_colab.ipynb
orontts/: constants.py  exceptions.py  utils.py
orontts/dataset/: __init__.py  hf_integration.py  loader.py
orontts/inference/: __init__.py  audio_output.py  synthesizer.py
orontts/model/: __init__.py  modules.py  vits2.py
orontts/preprocessing/: __init__.py  audio.py  phonemizer.py
orontts/scripts/: __init__.py  infer.py
orontts/training/: callbacks.py  lightning_module.py  losses.py  trainer.py
scripts/: README.md  __init__.py  clean_local_cv.py  infer.py  prepare.py  prepare_training_data.py  setup_runpod.sh  test_environment.py  test_pipeline.py  train.py
scripts/common-voices/: clean_cv_dataset.py  push_to_hf.py
scripts/data/: prepare_combined_dataset.py  prepare_cv_dataset.py
scripts/inference/: infer.py
scripts/setup/: runpod_setup.sh  setup_runpod.sh
scripts/training/: __init__.py  generate_samples.py  train.py  train.sh  train_background.sh
scripts/utils/: upload_to_hub.py
src/: __init__.py
src/core/: __init__.py  cfm.py  dit.py  model.py  ode.py
src/data/: __init__.py  audio.py  cleaner.py  dataset.py  denoiser.py  hf_wrapper.py
src/models/: __init__.py  decoder.py  discriminator.py  dit.py  duration_predictor.py  encoder.py  f5tts.py  flow.py  modules.py  posterior.py  vits.py
src/modules/: __init__.py  attention.py  duration.py  embeddings.py
src/orontts/: __init__.py
src/orontts/dataset/: hf_integration.py
src/orontts/inference/: synthesizer.py
src/orontts/model/: config.py  vits2.py
src/orontts/preprocessing/: text.py
src/orontts/scripts/: prepare_data.py  train.py
src/orontts/training/: __init__.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: __init__.py  audio.py  checkpoint.py  hub.py  logging.py  number_norm.py  phonemizer.py  text_cleaner.py  tokenizer.py
tests/: __init__.py  conftest.py  test_audio.py  test_checkpoint.py  test_cleaner.py  test_config.py  test_dataset_metadata.py  test_inference.py  test_model.py  test_text.py
