[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oron-tts"
version = "0.1.0"
description = "Mongolian Cyrillic (Khalkha) multi-speaker TTS using VITS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OronTTS Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # PyTorch - don't pin to allow RunPod's pre-installed version
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    # Core dependencies
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    # HuggingFace - datasets<4.0 uses soundfile (no torchcodec/FFmpeg required)
    "datasets>=3.0.0,<4.0.0",
    "huggingface-hub>=0.19.0",
    # Other dependencies
    "deepfilternet>=0.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
    "einops>=0.7.0",
    "torch-ema",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
]

[project.scripts]
oron-prepare = "scripts.prepare:main"
oron-train = "scripts.train:main"
oron-infer = "scripts.infer:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*", "configs*"]
